The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name:
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/10/01 17:05:00 CDT
Tag: blume-20031001-lal-mlrisc
Description:

MLRISC bug fix from Lal.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/30 16:10:00 CDT
Tag: blume-20030930-primio-bat
Description:

1. Added openVector, nullRd, and nullWr to PRIM_IO.
2. Improved .bat files (for Win32 port) to make things work under Win95.
   (thanks to Aaron S. Hawley for this one)

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/26 16:05:00 CDT
Tag: blume-20030926-wrappriv
Description:

Added missing wrapper for privilege "primitive" in $smlnj/viscomp/core.cm.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/26 15:00:00 CDT
Tag: blume-20030926-110_43_3
Description:

- additional cleanup
- version number bump, NEW BOOTFILES

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/09/26 12:00:00 CDT
Tag: blume-20030926-ppautoload
Description:

I modified the read-eval-print loop so that the autoloader gets
invoked whenever the prettyprinter tries to look up a symbol that
is not currently defined in the toplevel environment but which
appears in CM's autoload registry.  As a result, we see far fewer of
those ?.Foo.Bar.xxx names in the prettyprinter's output.

In addition to this I tried to clean up some pieces of the Basis
implementation (e.g., Socket, Word8Array) in order to prevent other